@@ -1,3 +1,9 @@
+2007-09-13  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-dis.c (get_valid_dis386): Take a pointer to
+	disassemble_info.  Handle IS_3BYTE_OPCODE.
+	(print_insn): Updated.  Don't handle IS_3BYTE_OPCODE here.
+
 2007-09-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i386-opc.h (CpuUnused): Defined with CpuMax.
